--- a/Assets/QuestLogStyle.uss
+++ b/Assets/QuestLogStyle.uss
@@ -11,3 +11,14 @@
 .description {
     font-size: 20px;
 }
+
+.questButton {
+    flex-grow: 1;
+    width: 100%;
+    height: 40px;
+    background-size: 100% 100%;
+    min-width: 0%;
+    max-width: 0%;
+    max-height: 40px;
+    min-height: 40px;
+}
